--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <div class="section active" id="section-1">
                 <h2 class="section-title">Talleres y Formato de Clases</h2>
                 <div class="question">
-                        <p class="question-text">¿Qué tipo de talleres te interesarían?</p>
+                        <p class="question-text">¿Qué tipo de talleres te interesaría tomar?</p>
                         <div class="options">
                             <label class="option">
                                 <input type="checkbox" name="tipoTaller" value="desarrollo" onchange="toggleOtroTaller()">
@@ -199,7 +199,7 @@
                             </label>
                             <label class="option">
                                 <input type="checkbox" name="tipoTaller" value="salud" onchange="toggleOtroTaller()">
-                                Salud y bienestar (ej. manejo del estrés)
+                                Salud y bienestar (ej. nutrición, manejo del estrés)
                             </label>
                             <label class="option">
                                 <input type="checkbox" name="tipoTaller" value="otro" onchange="toggleOtroTaller()">
