--- a/encuesta_instituto_clasica_v2.html
+++ b/encuesta_instituto_clasica_v2.html
@@ -179,26 +179,8 @@
             <div class="section active" id="section-1">
                 <h2 class="section-title">Talleres y Formato de Clases</h2>
                 <div class="question">
-                    <p class="question-text">¿Te gustaría que se ofrecieran talleres durante el semestre 3?</p>
+                    <p class="question-text">¿Qué tipo de talleres te interesaría tomar en Instituto?</p>
                     <div class="options">
-                        <label class="option">
-                            <input type="radio" name="quiereTalleres" value="si" onchange="toggleTalleresQuestions()">
-                            Sí
-                        </label>
-                        <label class="option">
-                            <input type="radio" name="quiereTalleres" value="no" onchange="toggleTalleresQuestions()">
-                            No
-                        </label>
-                        <label class="option">
-                            <input type="radio" name="quiereTalleres" value="noSeguro" onchange="toggleTalleresQuestions()">
-                            No estoy seguro(a)
-                        </label>
-                    </div>
-                </div>
-                <div id="talleresQuestions" class="hidden">
-                    <div class="question">
-                        <p class="question-text">¿Qué tipo de talleres te interesarían?</p>
-                        <div class="options">
                             <label class="option">
                                 <input type="checkbox" name="tipoTaller" value="desarrollo" onchange="toggleOtroTaller()">
                                 Desarrollo espiritual (ej. escrituras, temas del Evangelio de Jesucristo)
@@ -217,16 +199,15 @@
                             </label>
                             <label class="option">
                                 <input type="checkbox" name="tipoTaller" value="salud" onchange="toggleOtroTaller()">
-                                Salud y bienestar (ej. manejo del estrés)
+                                Salud y bienestar (ej. nutrición, manejo del estrés)
                             </label>
                             <label class="option">
                                 <input type="checkbox" name="tipoTaller" value="otro" onchange="toggleOtroTaller()">
                                 Otro (por favor, especifica):
                             </label>
                             <input type="text" id="otroTallerText" name="otroTallerText" class="hidden" placeholder="Especifica otro tipo de taller">
-                        </div>
                     </div>
-                    <div class="question">
+                </div>
                         <p class="question-text">¿Tienes alguna otra sugerencia específica de taller?</p>
                         <textarea name="sugerenciaTaller" placeholder="Escribe tu sugerencia aquí (opcional)"></textarea>
                     </div>
