--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
       </div>
       <!-- SECCIÓN 1 -->
       <div id="section-1" class="section">
-        <h2>1. Talleres y formato</h2>
-        <h3>¿Qué tipo de talleres te interesarían? <span style="font-weight:400; font-size:0.9em;">(Puedes seleccionar más de una opción)</span></h3>
+        <h2>Talleres y formato</h2>
+        <h3>¿Qué tipo de talleres te interesaría tomar en Instituto? <span style="font-weight:400; font-size:0.9em;">(Puedes seleccionar más de una opción)</span></h3>
         <label><input type="checkbox" name="Talleres" value="Desarrollo espiritual"> Desarrollo espiritual (ejemplo: estudio de escrituras, temas del Evangelio)</label>
         <label><input type="checkbox" name="Talleres" value="Habilidades prácticas"> Habilidades prácticas (ejemplo: liderazgo, comunicación, manejo del tiempo)</label>
         <label><input type="checkbox" name="Talleres" value="Arte y creatividad"> Arte y creatividad (ejemplo: música, pintura, escritura)</label>
@@ -156,7 +156,7 @@
       </div>
       <!-- SECCIÓN 2 -->
       <div id="section-2" class="section" style="display:none;">
-        <h2>2. Actividades de verano</h2>
+        <h2>Actividades de verano</h2>
         <h3>¿Qué tipo de actividades te gustaría que se organizaran durante el verano en el Instituto? <span style="font-weight:400; font-size:0.9em;">(Puedes seleccionar más de una opción)</span></h3>
         <label><input type="checkbox" name="Actividades_Verano" value="Actividades recreativas"> Actividades recreativas (ejemplo: deportes, juegos, subir cerros)</label>
         <label><input type="checkbox" name="Actividades_Verano" value="Actividades espirituales"> Actividades espirituales (ejemplo: devocionales, noches de testimonios, foros)</label>
@@ -174,7 +174,7 @@
       </div>
       <!-- SECCIÓN 3 -->
       <div id="section-3" class="section" style="display:none;">
-        <h2>3. Asistencia y motivación</h2>
+        <h2>Asistencia</h2>
         <h3>¿Actualmente asistes al Instituto de Religión?</h3>
         <label><input type="radio" name="Asistencia" value="Sí, asisto regularmente" required onclick="toggleMotivos(false)"> Sí, asisto regularmente</label>
         <label><input type="radio" name="Asistencia" value="Asisto de vez en cuando" required onclick="toggleMotivos(true)"> Asisto de vez en cuando</label>
