Update and rename encuesta_semestre3-2.html to index.html

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </div>
       <!-- SECCIÓN 1 -->
       <div id="section-1" class="section">
-        <h2>1. Talleres y formato</h2>
+        <h2>Talleres y formato</h2>
         <h3>¿Qué tipo de talleres te interesarían? <span style="font-weight:400; font-size:0.9em;">(Puedes seleccionar más de una opción)</span></h3>
         <label><input type="checkbox" name="Talleres" value="Desarrollo espiritual"> Desarrollo espiritual (ejemplo: estudio de escrituras, temas del Evangelio)</label>
         <label><input type="checkbox" name="Talleres" value="Habilidades prácticas"> Habilidades prácticas (ejemplo: liderazgo, comunicación, manejo del tiempo)</label>
@@ -156,7 +156,7 @@
       </div>
       <!-- SECCIÓN 2 -->
       <div id="section-2" class="section" style="display:none;">
-        <h2>2. Actividades de verano</h2>
+        <h2>Actividades de verano</h2>
         <h3>¿Qué tipo de actividades te gustaría que se organizaran durante el verano en el Instituto? <span style="font-weight:400; font-size:0.9em;">(Puedes seleccionar más de una opción)</span></h3>
         <label><input type="checkbox" name="Actividades_Verano" value="Actividades recreativas"> Actividades recreativas (ejemplo: deportes, juegos, subir cerros)</label>
         <label><input type="checkbox" name="Actividades_Verano" value="Actividades espirituales"> Actividades espirituales (ejemplo: devocionales, noches de testimonios, foros)</label>
@@ -174,7 +174,7 @@
       </div>
       <!-- SECCIÓN 3 -->
       <div id="section-3" class="section" style="display:none;">
-        <h2>3. Asistencia y motivación</h2>
+        <h2>Asistencia</h2>
         <h3>¿Actualmente asistes al Instituto de Religión?</h3>
         <label><input type="radio" name="Asistencia" value="Sí, asisto regularmente" required onclick="toggleMotivos(false)"> Sí, asisto regularmente</label>
         <label><input type="radio" name="Asistencia" value="Asisto de vez en cuando" required onclick="toggleMotivos(true)"> Asisto de vez en cuando</label>
@@ -209,7 +209,7 @@
       </div>
       <!-- SECCIÓN 4 -->
       <div id="section-4" class="section" style="display:none;">
-        <h2>4. Datos adicionales</h2>
+        <h2>Datos adicionales</h2>
         <h3>Por favor, indica tu rango de edad:</h3>
         <label><input type="radio" name="Edad_Rango" value="18-25 años" required> 18-25 años</label>
         <label><input type="radio" name="Edad_Rango" value="26-35 años" required> 26-35 años</label>
@@ -229,8 +229,8 @@
       </div>
     </form>
     <div class="thank-you" id="thankYou" style="display:none;">
-      ¡Muchas gracias por responder!<br>Tu opinión es muy valiosa para nosotros.<br><br>
-      <strong>Ahora el siguiente paso es inscribirte. Puedes hacerlo directamente en este <a href="https://form.jotform.com/230085502343850" target="_blank">link</a>.</strong><br><br>
+       <small>¡Muchas gracias por responder!<br>Tu opinión es muy valiosa para nosotros.<br><br>
+      <strong>📝 Ahora el siguiente paso es inscribirte. Puedes hacerlo directamente en este <a href="https://form.jotform.com/230085502343850" target="_blank">link</a>.</strong><br><br>
       <small>Si aún no nos visitas, te invitamos a conocer el Instituto. ¡Estamos seguros de que encontrarás un espacio donde perteneces!<br>
       📍 <a href="https://maps.app.goo.gl/8bb37uG5t7QhPPY78" target="_blank">Visítanos aquí</a><br>
       📱 Síguenos en Instagram: <a href="https://instagram.com/institutocuu" target="_blank">@institutocuu</a></small>
