--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <!-- SECCIÓN 1 -->
       <div id="section-1" class="section">
         <h2>Talleres y formato</h2>
-        <h3>¿Qué tipo de talleres te interesarían? <span style="font-weight:400; font-size:0.9em;">(Puedes seleccionar más de una opción)</span></h3>
+        <h3>¿Qué tipo de talleres te interesa tomar en Instituto? <span style="font-weight:400; font-size:0.9em;">(Puedes seleccionar más de una opción)</span></h3>
         <label><input type="checkbox" name="Talleres" value="Desarrollo espiritual"> Desarrollo espiritual (ejemplo: estudio de escrituras, temas del Evangelio)</label>
         <label><input type="checkbox" name="Talleres" value="Habilidades prácticas"> Habilidades prácticas (ejemplo: liderazgo, comunicación, manejo del tiempo)</label>
         <label><input type="checkbox" name="Talleres" value="Arte y creatividad"> Arte y creatividad (ejemplo: música, pintura, escritura)</label>
