--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     </form>
     <div class="thank-you" id="thankYou" style="display:none;">
        <small>¡Muchas gracias por responder!<br>Tu opinión es muy valiosa para nosotros.<br><br>
-      <strong>📝 Ahora el siguiente paso es inscribirte. Puedes hacerlo directamente en este <a href="https://form.jotform.com/230085502343850" target="_blank">link</a>.</strong><br><br>
+      <strong>📝 Ahora el siguiente paso es inscribirte. Puedes hacerlo directamente en <a href="https://form.jotform.com/230085502343850" target="_blank">este link</a>.</strong><br><br>
       <small>Si aún no nos visitas, te invitamos a conocer el Instituto. ¡Estamos seguros de que encontrarás un espacio donde perteneces!<br>
       📍 <a href="https://maps.app.goo.gl/8bb37uG5t7QhPPY78" target="_blank">Visítanos aquí</a><br>
       📱 Síguenos en Instagram: <a href="https://instagram.com/institutocuu" target="_blank">@institutocuu</a></small>
