--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
     </form>
     <div class="thank-you" id="thankYou" style="display:none;">
        <small>¡Muchas gracias por responder!<br>Tu opinión es muy valiosa para nosotros.<br><br>
-      <strong>📝 Ahora el siguiente paso es inscribirte. Puedes hacerlo directamente en <a href="https://form.jotform.com/230085502343850" target="_blank">este link</a>.</strong><br><br>
-      <small>Si aún no nos visitas, te invitamos a conocer el Instituto. ¡Estamos seguros de que encontrarás un espacio donde perteneces!<br>
-      📍 <a href="https://maps.app.goo.gl/8bb37uG5t7QhPPY78" target="_blank">Visítanos aquí</a><br>
+      <strong>📝 ¡El siguiente paso es inscribirte a Instituto Puedes hacerlo directamente en <a href="https://form.jotform.com/230085502343850" target="_blank">este link</a>.</strong><br><br>
+      <small>Si aún no nos visitas, te invitamos a conocer lo que tenemos para ti. ¡Perteneces con nosotros!<br>
+      📍 <a href="https://maps.app.goo.gl/8bb37uG5t7QhPPY78" target="_blank">Visítanos aquí</a><br><br>
       📱 Síguenos en Instagram: <a href="https://instagram.com/institutocuu" target="_blank">@institutocuu</a></small>
     </div>
     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
