--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     </form>
     <div class="thank-you" id="thankYou" style="display:none;">
       <small>¡Muchas gracias por responder!<br>Tu opinión es muy valiosa para nosotros.<br><br>
-      <strong>📝 ¡El siguiente paso es inscribirte a Instituto Puedes hacerlo directamente en <a href="https://form.jotform.com/230085502343850" target="_blank">este link</a>.</strong><br><br>
+      <strong>📝 ¡El siguiente paso es inscribirte a Instituto! <a href="https://form.jotform.com/230085502343850" target="_blank">Haz click aquí para inscribirte ahora</a>.</strong><br><br>
       <small>Si aún no nos visitas, te invitamos a conocer lo que tenemos para ti. ¡Perteneces con nosotros!<br>
       📍 <a href="https://maps.app.goo.gl/8bb37uG5t7QhPPY78" target="_blank">Visítanos aquí</a><br><br>
       📱 Síguenos en Instagram: <a href="https://instagram.com/institutocuu" target="_blank">@institutocuu</a></small>
